# Intelligent-Document-Intelligence-Platform-IDIP-

./: .gitignore  Dockerfile.api  Dockerfile.base  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  settings.py
data/: versions.json
data/faiss_index/: id_map.json  index.faiss
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
infra/: README.md  __init__.py  config.py  exceptions.py
infra/argo/: analysis-template.yaml
infra/scripts/: download_models.py
infra/terraform/: main.tf  outputs.tf  variables.tf
ingestion/: README.md  __init__.py  base.py  config.py  deduplication.py  dlq.py  exceptions.py  models.py  orchestrator.py  storage.py  validation.py
ingestion/adapters/: api.py  database.py  image.py  pdf.py  stream.py
mlops/: README.md  __init__.py  ab_testing.py  config.py  data_versioning.py  exceptions.py  retraining.py  tracking.py
models/: README.md  __init__.py  config.py  ensemble.py  exceptions.py  guardrails.py  router.py
models/classifier/: README.md  __init__.py  config.py  exceptions.py  service.py
models/llm/: eval.py  finetune.py  inference.py
models/ner/: README.md  __init__.py  config.py  exceptions.py  service.py
models/vision/: README.md  __init__.py  config.py  exceptions.py  service.py
monitoring/: README.md  __init__.py  config.py  drift.py  exceptions.py  grafana_dashboard.json  llm_eval.py  metrics.py  tracing.py
preprocessing/: README.md  __init__.py  chunking.py  cleaning.py  config.py  embeddings.py  exceptions.py  feature_store.py  features.py  models.py
rag/: README.md  __init__.py  agent.py  config.py  exceptions.py  models.py  pipeline.py  prompt_templates.py  reranker.py  vector_store.py
scratch/: clear_redis.py  inspect_benchmark.py  inspect_db.py  inspect_faiss_map.py  query_doc.py  test_api_doc.py  test_query.py  test_reranker.py  upload_resume.py
serving/: README.md  __init__.py  api.py  cache.py  config.py  dependencies.py  exceptions.py  middleware.py  schemas.py  tasks.py  worker.py
serving/static/: index.html
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/ingestion/: conftest.py  test_api_adapter.py  test_database_adapter.py  test_image_adapter.py  test_orchestration.py  test_pdf_adapter.py  test_stream_adapter.py  test_validation.py
tests/mlops/: test_ab_testing.py  test_mlops.py
tests/models/: test_classifier.py  test_ensemble.py  test_guardrails.py  test_llm.py  test_ner.py  test_router.py  test_vision.py
tests/monitoring/: test_monitoring.py
tests/performance/: test_performance.py
(+40 files in other folders)
