[tool.poetry]
name = "idip"
version = "0.1.0"
description = "Intelligent Document Intelligence Platform"
authors = ["DeepMind Agent <agent@deepmind.google>"]
readme = "README.md"
packages = [
    { include = "config" },
    { include = "ingestion" },
    { include = "preprocessing" },
    { include = "models" },
    { include = "rag" },
    { include = "serving" },
    { include = "mlops" },
    { include = "monitoring" },
    { include = "infra" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
numpy = "^1.26.0"
psycopg2-binary = "^2.9.12"

[tool.poetry.group.ingestion.dependencies]
pymupdf = "^1.23.0"
pytesseract = "^0.3.10"
pillow = "^10.2.0"
opencv-python-headless = "^4.9.0"
httpx = "^0.26.0"
confluent-kafka = "^2.3.0"
fastavro = "^1.9.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
boto3 = "^1.34.0"
great-expectations = "^0.18.0"
langdetect = "^1.0.9"
pandas = "^2.2.0"
pyarrow = "^15.0.0"

[tool.poetry.group.preprocessing.dependencies]
tiktoken = "^0.5.0"
nltk = "^3.8.1"
sentence-transformers = "^2.3.0"
torch = "^2.2.0"

[tool.poetry.group.models.dependencies]
bitsandbytes = "^0.42.0"
accelerate = "^0.27.0"
peft = "^0.8.0"
trl = "^0.7.11"
datasets = "^2.16.0"
xgboost = "^2.0.0"
scikit-learn = "^1.4.0"

[tool.poetry.group.rag.dependencies]
pinecone-client = "^3.0.0"
weaviate-client = "^3.26.0"
faiss-cpu = "^1.7.4"
jinja2 = "^3.1.3"
transformers = "^4.37.0"
langgraph = "^0.0.25"

[tool.poetry.group.serving.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.9"
celery = "^5.3.6"

[tool.poetry.group.mlops.dependencies]
mlflow = "^2.10.0"
dvc = "^3.43.0"

[tool.poetry.group.monitoring.dependencies]
evidently = "^0.4.14"
ragas = "^0.1.0"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
mypy = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-benchmark = "^4.0.0"
respx = "^0.20.2"
moto = "^5.0.0"
testcontainers = "^4.14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "RET"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
pythonpath = ["."]
